--- a/microservices/microservices/vilains/pom.xml
+++ b/microservices/microservices/vilains/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.escoffier.workshop</groupId>
-    <artifactId>supes-monolith</artifactId>
+    <artifactId>vilains</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
