--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Java CI with Maven
 
 on:
-  [push]
+  push:
   pull_request:
     branches: [ "master" ]
 
@@ -18,18 +18,27 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Set Image Tag
-        run: |
-          echo "BUILD_IMAGE_TAG=${GITHUB_REF_NAME}-${GITHUB_SHA}" >> $GITHUB_ENV
+    
     - name: Build with Maven
       run: mvn -B package --file ./microservices/supes-monolith/pom.xml
+  docker:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    steps:
+    - name: Set Image Tag
+      run: |
+        echo "BUILD_IMAGE_TAG=${GITHUB_REF_NAME}-${GITHUB_SHA}" >> $GITHUB_ENV
+
     - name: Build docker image
-        run:
-          docker build -f ./microservices/supes-monolith/src/main/docker/Dockerfile.jvm -t workshop/supes-monolith .
+      run:
+        docker build -f ./microservices/supes-monolith/src/main/docker/Dockerfile.jvm -t workshop/supes-monolith .
+
     - name: Log in to Docker Hub
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Deploy on DockerHub
-      run: docker push dodo000/supes-monolith .
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/supes-monolith .
+    
