--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,19 +26,15 @@ jobs:
     needs: build
     if: github.ref == 'refs/heads/master'
     steps:
-    - name: Set Image Tag
-      run: |
-        echo "BUILD_IMAGE_TAG=${GITHUB_REF_NAME}-${GITHUB_SHA}" >> $GITHUB_ENV
-
-    - name: Build docker image
-      run:
-        docker build -f ./microservices/supes-monolith/src/main/docker/Dockerfile.jvm -t workshop/supes-monolith .
-
+    
     - name: Log in to Docker Hub
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Deploy on DockerHub
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/supes-monolith .
+      uses: docker/build-push-action@v3
+      with:
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/supes:latest
     
