--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/docker'
     steps:
     
     - name: Log in to Docker Hub
@@ -35,6 +35,7 @@ jobs:
     - name: Deploy on DockerHub
       uses: docker/build-push-action@v3
       with:
+        file: ./microservices/supes-monolith/src/main/docker/Dockerfile.jvm
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/supes:latest
     
