--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,22 +26,33 @@ jobs:
     needs: build
     if: github.ref == 'refs/heads/docker'
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
+    - name: log into Docker
+      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Deploy on DockerHub
-      uses: docker/build-push-action@v3
-      with:
-        context: ./microservices/supes-monolith
-        file: ./microservices/supes-monolith/src/main/docker/Dockerfile.jvm
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/supes:latest
+    - name: build image
+      run:  docker build -f src/main/docker/Dockerfile.jvm -t supes .
+    - name: push
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/supes:latest .
+
+
+ #   - name: Checkout
+ #     uses: actions/checkout@v3
+ #   - name: Set up QEMU
+ #     uses: docker/setup-qemu-action@v2
+ #   - name: Set up Docker Buildx
+ #     uses: docker/setup-buildx-action@v2
+ #   - name: Log in to Docker Hub
+ #     uses: docker/login-action@v2
+ #     with:
+ #       username: ${{ secrets.DOCKER_USERNAME }}
+ #       password: ${{ secrets.DOCKER_PASSWORD }}
+ #   - name: Deploy on DockerHub
+ #     uses: docker/build-push-action@v3
+ #     with:
+ #       context: ./microservices/supes-monolith
+ #       file: ./microservices/supes-monolith/src/main/docker/Dockerfile.jvm
+ #       push: true
+ #       tags: ${{ secrets.DOCKER_USERNAME }}/supes:latest
     
