--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,16 @@ jobs:
     needs: build
     if: github.ref == 'refs/heads/docker'
     steps:
+
+    - name: Checkout
+      uses: actions/checkout@v3
+
     - name: log into Docker
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        
     - name: build image
       run:  docker build -f src/main/docker/Dockerfile.jvm -t supes .
     - name: push
