--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,9 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        
+
     - name: build image
-      run:  docker build -f src/main/docker/Dockerfile.jvm -t supes .
+      run:  docker build -f src/main/docker/Dockerfile.jvm -t supes ./microservices/supes-monolith
     - name: push
       run: docker push ${{ secrets.DOCKER_USERNAME }}/supes:latest .
 
