--- a/microservices/microservices/fight/kubernetes/deployment.yaml
+++ b/microservices/microservices/fight/kubernetes/deployment.yaml
@@ -2,41 +2,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: supes-monolith
+  name: fight-monolith
   labels:
-    app: supes-monolith
+    app: fight-monolith
 spec:
   replicas: 1
   strategy:
     type: RollingUpdate
   selector:
     matchLabels:
-      app: supes-monolith
+      app: fight-monolith
   template:
     metadata:
       labels:
-        app: supes-monolith
+        app: fight-monolith
     spec:
       containers:
-      - name: supes-monolith
-        image: workshop/supes-monolith:latest
+      - name: fight-monolith
+        image: workshop/fight-monolith:1.1
         ports:
         - name: http
           containerPort: 8080
         imagePullPolicy: IfNotPresent
-        env:
-          - name: QUARKUS_DATASOURCE_URL
-            valueFrom:
-              configMapKeyRef:
-                name: supes-config
-                key: database
-          - name: QUARKUS_DATASOURCE_USERNAME
-            valueFrom:
-              secretKeyRef:
-                name: supes-database-secret
-                key: username
-          - name: QUARKUS_DATASOURCE_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: supes-database-secret
-                key: password
+        
