--- a/microservices/microservices/fight/kubernetes/service.yaml
+++ b/microservices/microservices/fight/kubernetes/service.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supes-monolith
+  name: fight-monolith
 spec:
   type: LoadBalancer
   selector:
-    app: supes-monolith
+    app: fight-monolith
   ports:
   - port: 8080
     targetPort: http
