--- a/microservices/microservices/fight/pom.xml
+++ b/microservices/microservices/fight/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.escoffier.workshop</groupId>
-    <artifactId>supes-monolith</artifactId>
+    <artifactId>fight-monolith</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -63,6 +63,14 @@
             <artifactId>rest-assured</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+    <groupId>io.quarkus</groupId>
+    <artifactId>quarkus-rest-client</artifactId>
+</dependency>
+<dependency>
+    <groupId>io.quarkus</groupId>
+    <artifactId>quarkus-rest-client-jackson</artifactId>
+</dependency>
     </dependencies>
     <build>
         <plugins>
