--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,6 +2,7 @@ name: Java CI with Maven
 
 on:
   push:
+    branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
 
@@ -18,6 +19,5 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    
     - name: Build with Maven
       run: mvn -B package --file ./microservices/supes-monolith/pom.xml
