--- a/microservices/microservices/vilains/kubernetes/deployment.yaml
+++ b/microservices/microservices/vilains/kubernetes/deployment.yaml
@@ -2,24 +2,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: supes-monolith
+  name: supes-vilain
   labels:
-    app: supes-monolith
+    app: supes-vilain
 spec:
   replicas: 1
   strategy:
     type: RollingUpdate
   selector:
     matchLabels:
-      app: supes-monolith
+      app: supes-vilain
   template:
     metadata:
       labels:
-        app: supes-monolith
+        app: supes-vilain
     spec:
       containers:
-      - name: supes-monolith
-        image: workshop/supes-monolith:latest
+      - name: supes-vilain
+        image: vilain:latest
         ports:
         - name: http
           containerPort: 8080
