feat: :sparkles: modification du nom du déploiement

--- a/microservices/microservices/fight/kubernetes/service.yaml
+++ b/microservices/microservices/fight/kubernetes/service.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: supes-fight
+    app: fight-micro
   ports:
   - port: 8080
     targetPort: http
