--- a/microservices/microservices/vilains/kubernetes/service.yaml
+++ b/microservices/microservices/vilains/kubernetes/service.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supes-monolith
+  name: supes-vilain
 spec:
   type: LoadBalancer
   selector:
-    app: supes-monolith
+    app: supes-vilain
   ports:
   - port: 8080
     targetPort: http
