feat: :sparkles: clusterIp
changement du service du load balancer en clusterIP pour ne plus pouvoir y accéder autrement que pars fight micro service

--- a/microservices/microservices/heroes/kubernetes/service.yaml
+++ b/microservices/microservices/heroes/kubernetes/service.yaml
@@ -4,7 +4,7 @@ kind: Service
 metadata:
   name: supes-hero
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: supes-hero
   ports:
