--- a/microservices/microservices/heroes/kubernetes/deployment.yaml
+++ b/microservices/microservices/heroes/kubernetes/deployment.yaml
@@ -40,3 +40,23 @@ spec:
               secretKeyRef:
                 name: supes-database-secret
                 key: password
+        livenessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /q/health/live
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 0
+          periodSeconds: 30
+          successThreshold: 1
+          timeoutSeconds: 10
+        readinessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /q/health/ready
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 0
+          periodSeconds: 30
+          successThreshold: 1
+          timeoutSeconds: 10
