feat(health): ajout de fonctionnalité permettant de monitorer la santé des pods
* style(hero): changement du nom de l'image pour hero && changement du nom du container
(OK)

* feat(vilain): changement nom image && container

* feat(fight): NOK ; pb sur la config

* feat() : ajout d'une interface personnage

* feat(): propagation du personnage.

* feat: :sparkles: modification du nom du déploiement

* feat: :sparkles: communication avec http

* feat: :sparkles: ajout du path pour accéder au vilain

* fix: :ambulance: communication avec fight possible

Changement du nom dans le service permettant de ce connecter au client fight

* feat: :sparkles: clusterIp

changement du service du load balancer en clusterIP pour ne plus pouvoir y accéder autrement que pars fight micro service

* refactor: :sparkles: modification artifactId

* chore: :truck: app properties

ajout du chemin permettant de ce connecter au micro service

* oups le debug

* feat: :sparkles: health

ajout d'une dépendance quarkus permettant de vérifier la santé de nos pods supes-hero && sueps-vilain

* feat(health): ajout d'un message personnalisé dans le health check de vilain && hero

Co-authored-by: Daemianas <Daemianas@users.noreply.github.com>

* fix: :ambulance: properties

déplacement dans le bon répertoire

* fix: :ambulance: mediaType

suppr d'utilisation jugé inutile

* feat: :chart_with_upwards_trend: save logs

la santé du pods s'inscrit désormais dans le pods

* style: :ambulance: nom artefact

Co-authored-by: Daemianas <lombar2d@laposte.net>
Co-authored-by: Daemianas <Daemianas@users.noreply.github.com>

--- a/microservices/microservices/fight/kubernetes/service.yaml
+++ b/microservices/microservices/fight/kubernetes/service.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fight-monolith
+  name: fight-micro
 spec:
   type: LoadBalancer
   selector:
-    app: fight-monolith
+    app: supes-fight
   ports:
   - port: 8080
     targetPort: http
