--- a/microservices/microservices/heroes/kubernetes/service.yaml
+++ b/microservices/microservices/heroes/kubernetes/service.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supes-monolith
+  name: supes-hero
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
-    app: supes-monolith
+    app: supes-hero
   ports:
   - port: 8080
     targetPort: http
