--- a/microservices/microservices/heroes/pom.xml
+++ b/microservices/microservices/heroes/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.escoffier.workshop</groupId>
-    <artifactId>heroes</artifactId>
+    <artifactId>supes-hero</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -48,6 +48,10 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-jdbc-postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-health</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
