update & resolve error communication between services

--- a/microservices/microservices/fight/src/main/resources/META-INF/resources/application.properties
+++ b/microservices/microservices/fight/src/main/resources/META-INF/resources/application.properties
@@ -1,2 +1,2 @@
 supes-hero/mp-rest/url=http://supes-hero:8080
-supes-vilain/mp-rest/url=http://supes-vilain:8080
+supes-villain/mp-rest/url=http://supes-villain:8080
