--- a/microservices/microservices/fight/kubernetes/deployment.yaml
+++ b/microservices/microservices/fight/kubernetes/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: supes-fight
 spec:
-  replicas: 1
+  replicas: 2
   strategy:
     type: RollingUpdate
   selector:
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: supes-fight
-        image: fight:latest
+        image: fight:1.2
         ports:
         - name: http
           containerPort: 8080
