--- a/microservices/microservices/fight/src/main/resources/application.properties
+++ b/microservices/microservices/fight/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-quarkus.http.cors=true
 supes-hero/mp-rest/url=http://supes-hero:8080
-supes-vilain/mp-rest/url=http://supes-vilain:8080
+supes-villain/mp-rest/url=http://supes-villain:8080
