update & resolve error communication between services

--- a/microservices/microservices/heroes/kubernetes/database.yaml
+++ b/microservices/microservices/heroes/kubernetes/database.yaml
@@ -2,15 +2,15 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres
+  name: hero-postgres
 spec:
   selector:
     matchLabels:
-      app: supes-database
+      app: hero-database
   template:
     metadata:
       labels:
-        app: supes-database
+        app: hero-database
     spec:
       containers:
         - name: postgres
@@ -19,19 +19,19 @@ spec:
             - containerPort: 5432
           env:
             - name: POSTGRES_DB
-              value: supes
+              value: hero
             - name: POSTGRES_USER
-              value: supes
+              value: hero
             - name: POSTGRES_PASSWORD
-              value: supes
+              value: hero
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: supes-database
+  name: hero-database
 spec:
   ports:
     - port: 5432
   selector:
-    app: supes-database
+    app: hero-database
