--- a/microservices/microservices/heroes/src/main/resources/application.properties
+++ b/microservices/microservices/heroes/src/main/resources/application.properties
@@ -3,10 +3,10 @@
 quarkus.http.cors=true
 
 # Database configuration
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://supes-database:5432/supes
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://hero-database:5432/hero
 quarkus.datasource.db-kind=postgresql
-#quarkus.datasource.username=supes
-#quarkus.datasource.password=supes
+#quarkus.datasource.username=hero
+#quarkus.datasource.password=hero
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 
