--- a/microservices/microservices/vilains/kubernetes/service.yaml
+++ b/microservices/microservices/vilains/kubernetes/service.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supes-vilain
+  name: supes-villain
 spec:
   type: ClusterIP
   selector:
-    app: supes-vilain
+    app: supes-villain
   ports:
   - port: 8080
     targetPort: http
