--- a/microservices/microservices/fight/kubernetes/deployment.yaml
+++ b/microservices/microservices/fight/kubernetes/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: supes-fight
-        image: fight:1.2
+        image: fight:latest
         ports:
         - name: http
           containerPort: 8080
