--- a/microservices/microservices/heroes/kubernetes/deployment.yaml
+++ b/microservices/microservices/heroes/kubernetes/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: supes-hero
-          image: hero:1.1
+          image: hero:latest
           ports:
             - name: http
               containerPort: 8080
@@ -40,3 +40,23 @@ spec:
                 secretKeyRef:
                   name: hero-database-secret
                   key: password
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /q/health/live
+              port: 8080
+              scheme: HTTP
+            initialDelaySeconds: 0
+            periodSeconds: 30
+            successThreshold: 1
+            timeoutSeconds: 10
+            readinessProbe:
+              failureThreshold: 3
+              httpGet:
+                path: /q/health/ready
+                port: 8080
+                scheme: HTTP
+              initialDelaySeconds: 0
+              periodSeconds: 30
+              successThreshold: 1
+              timeoutSeconds: 10
