--- a/microservices/microservices/fight/kubernetes/deployment.yaml
+++ b/microservices/microservices/fight/kubernetes/deployment.yaml
@@ -24,4 +24,23 @@ spec:
         - name: http
           containerPort: 8080
         imagePullPolicy: IfNotPresent
-        
+        livenessProbe:
+            failureThreshold: 1
+            httpGet:
+              path: /q/health/live
+              port: 8080
+              scheme: HTTP
+            initialDelaySeconds: 30
+            periodSeconds: 5
+            successThreshold: 1
+            timeoutSeconds: 3
+        readinessProbe:
+            failureThreshold: 1
+            httpGet:
+              path: /q/health/ready
+              port: 8080
+              scheme: HTTP
+            initialDelaySeconds: 30
+            periodSeconds: 5
+            successThreshold: 1
+            timeoutSeconds: 10
