--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,11 @@ jobs:
         distribution: 'temurin'
         cache: maven
     
-    - name: Build with Maven
-      run: mvn -B package --file ./microservices/supes-monolith/pom.xml
+    - name: Build Heroes with Maven
+      run: mvn -B package --file ./microservices/microservices/heroes/pom.xml
+
+    - name: Build Villains with Maven
+      run: mvn -B package --file ./microservices/microservices/villains/pom.xml
+
+    - name: Build Fight with Maven
+      run: mvn -B package --file ./microservices/microservices/fight/pom.xml
