--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,5 +19,12 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file ./microservices/supes-monolith/pom.xml
+
+    - name: Build Heroes with Maven
+      run: mvn -B package --file ./microservices/microservices/heroes/pom.xml
+
+    - name: Build Villains with Maven
+      run: mvn -B package --file ./microservices/microservices/villains/pom.xml
+
+    - name: Build Fight with Maven
+      run: mvn -B package --file ./microservices/microservices/fight/pom.xml
